fixed choice button spacing

--- a/app/assets/stylesheets/frontend/registration.css.scss
+++ b/app/assets/stylesheets/frontend/registration.css.scss
@@ -10,7 +10,6 @@ body.registration {
     @include prepend(4);
 } }
 
-#form_container { padding-top: 20px; }
 #cam-modal {
   display: none;
 
